Fixed responsive style for .lists on small screens

--- a/main.css
+++ b/main.css
@@ -88,13 +88,11 @@ img {
 .lists {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 1.5em;
-  row-gap: 1.5em;
   padding: 3vw;
 }
 
 @media (max-width: 700px) {
-  .articles {
+  .lists {
     grid-template-columns: 1fr;
   }
 
